[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = ""
authors = ["Matthew Goldey <matthew.goldey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
ipython = "^8.21.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
jupyter = "^1.0.0"
pgvector = "^0.2.5"
sentence-transformers = "^2.3.1"
cython = "<3"
psycopg = "^3.1.18"
streamlit = "^1.31.1"
transformers = "^4.38.0"
ctransformers = {extras = ["cuda"], version = "^0.2.27"}
black = "^24.2.0"
isort = "^5.13.2"
fire = "^0.5.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
